Typage des xsd:date en java.util.Date
svn path=/java/trunk/; revision=498