@@ -1,8 +1,9 @@
-package fr.urssaf.image.commons.xml.jaxb;
+package fr.urssaf.image.commons.xml.jaxb.modele;
 
 import static org.junit.Assert.assertEquals;
 
 import java.io.File;
+import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
 
@@ -13,15 +14,34 @@ import javax.xml.bind.Unmarshaller;
 
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang.SystemUtils;
+import org.apache.commons.lang.time.DateUtils;
 import org.junit.Before;
 import org.junit.Test;
 
+@SuppressWarnings("PMD")
 public class JaxbTest {
 
    private static final String REPERTORY;
 
+   private static final Date PAST;
+
+   private static final Date FUTURE;
+
    static {
       REPERTORY = SystemUtils.getJavaIoTmpDir().getAbsolutePath();
+
+      Calendar past = Calendar.getInstance();
+      past.set(1999, 11, 31);
+      past = DateUtils.truncate(past, Calendar.DATE);
+
+      PAST = past.getTime();
+
+      Calendar future = Calendar.getInstance();
+      future.set(2999, 11, 31);
+      future = DateUtils.truncate(future, Calendar.DATE);
+
+      FUTURE = future.getTime();
+
    }
 
    private ObjectFactory factory;
@@ -35,7 +55,7 @@ public class JaxbTest {
       DocumentType document = factory.createDocumentType();
       document.id = id;
       document.titre = titre;
-      // document.date = date;
+      document.date = date;
 
       return document;
    }
@@ -52,7 +72,7 @@ public class JaxbTest {
       EtatType etat = factory.createEtatType();
       etat.id = id;
       etat.libelle = libelle;
-      // etat.date = date;
+      etat.date = date;
 
       return etat;
    }
@@ -65,12 +85,12 @@ public class JaxbTest {
       AuteurType auteur0 = this.createAuteur(0, "auteur 0");
       AuteurType auteur1 = this.createAuteur(1, "auteur 1");
 
-      EtatType etat0 = this.createEtat(0, "open", new Date());
-      EtatType etat1 = this.createEtat(1, "close", new Date());
-      EtatType etat2 = this.createEtat(2, "open", new Date());
+      EtatType etat0 = this.createEtat(0, "open", FUTURE);
+      EtatType etat1 = this.createEtat(1, "close", PAST);
+      EtatType etat2 = this.createEtat(2, "open", FUTURE);
 
-      DocumentType document0 = this.createDocument(0, "titre 0", new Date());
-      DocumentType document1 = this.createDocument(1, "titre 1", new Date());
+      DocumentType document0 = this.createDocument(0, "titre 0", PAST);
+      DocumentType document1 = this.createDocument(1, "titre 1", FUTURE);
 
       document0.setAuteur(auteur0);
       document1.setAuteur(auteur1);
@@ -84,14 +104,14 @@ public class JaxbTest {
 
       JAXBContext context = JAXBContext.newInstance(Documents.class);
 
-      Marshaller m = context.createMarshaller();
-      m.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, Boolean.TRUE);
+      Marshaller marshaller = context.createMarshaller();
+      marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, Boolean.TRUE);
 
-      m.marshal(docs, System.out);
+      marshaller.marshal(docs, System.out);
 
       File output = new File(FilenameUtils.concat(REPERTORY, "documents.xml"));
 
-      m.marshal(docs, output);
+      marshaller.marshal(docs, output);
 
    }
 
@@ -99,30 +119,32 @@ public class JaxbTest {
    public void unmarshall() throws JAXBException {
 
       JAXBContext context = JAXBContext.newInstance(Documents.class);
-      Unmarshaller u = context.createUnmarshaller();
+      Unmarshaller unmarshaller = context.createUnmarshaller();
 
       File input = new File("src/test/resources/documents.xml");
-      Documents docs = (Documents) u.unmarshal(input);
+      Documents docs = (Documents) unmarshaller.unmarshal(input);
 
-      assertDocument(docs.document.get(0), 0, "titre 0", 0, "auteur 0");
-      assertEtat(docs.document.get(0).getEtat(), 0, 0, "open");
-      assertEtat(docs.document.get(0).getEtat(), 1, 1, "close");
+      assertDocument(docs.document.get(0), 0, "titre 0", 0, "auteur 0", PAST);
+      assertEtat(docs.document.get(0).getEtat(), 0, 0, "open", FUTURE);
+      assertEtat(docs.document.get(0).getEtat(), 1, 1, "close", PAST);
 
-      assertDocument(docs.document.get(1), 1, "titre 1", 1, "auteur 1");
-      assertEtat(docs.document.get(1).getEtat(), 0, 2, "open");
+      assertDocument(docs.document.get(1), 1, "titre 1", 1, "auteur 1", FUTURE);
+      assertEtat(docs.document.get(1).getEtat(), 0, 2, "open", FUTURE);
    }
 
    private void assertDocument(DocumentType document, int id, String titre,
-         int idAuteur, String nomAuteur) {
+         int idAuteur, String nomAuteur, Date date) {
 
-      assertEquals(new Integer(id), document.id);
+      assertEquals(Integer.valueOf(id), document.id);
+      assertEquals(date, document.getDate());
    }
 
    private void assertEtat(List<EtatType> etats, int index, int id,
-         String libelle) {
+         String libelle, Date date) {
 
-      assertEquals(new Integer(id), etats.get(index).id);
+      assertEquals(Integer.valueOf(id), etats.get(index).id);
       assertEquals(libelle, etats.get(index).libelle);
+      assertEquals(date, etats.get(index).date);
    }
 
 }
